<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_bar_profile"
        android:icon="@drawable/ic_account"
        android:orderInCategory="100"
        app:showAsAction="always"
        tools:ignore="MenuTitle" />
</menu>