<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/personal_notes_et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_title"
            android:inputType="textPersonName"
            android:maxLength="@string/max_length_name"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/personal_notes_edit_bt_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingBottom="16dp"
            android:src="@drawable/ic_send"
            app:backgroundTint="@color/dark_sea_green"
            app:fabCustomSize="40dp" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/personal_notes_et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/default_note_message"
        android:inputType="textMultiLine"
        android:minLines="20"
        android:scrollIndicators="end"
        android:scrollbars="vertical"
        tools:ignore="VisualLintTextFieldSize" />

</LinearLayout>