<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/popup_menu_edit"
        android:title="@string/bt_edit" />
    <item
        android:id="@+id/popup_menu_delete"
        android:title="@string/bt_delete" />
</menu>