<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:checkable="true"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_todolist"
        android:icon="@drawable/ic_todolist"
        android:checkable="true"
        android:title="@string/title_todolist" />

    <item
        android:id="@+id/navigation_personal_notes"
        android:icon="@drawable/ic_personal_notes"
        android:checkable="true"
        android:title="@string/title_personal_notes" />
</menu>